# Yarte

./: .gitignore  CMakeLists.txt  README.md
source/: camera.cpp  camera.h  color.cpp  color.h  environment.cpp  environment.h  light.h  main.cpp  matrix.cpp  matrix.h  object.cpp  object.h  ray.cpp  ray.h  raytracer.c  raytracer.cpp  raytracer.h  rt.c  utils.cpp  utils.h
